--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+hola esta es mi segunda prueba, ahora voy a realizar un commit
+para ello voy a utilizar la consola Git
